--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,10 @@
 {
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/index.html" }
+  "routes": [
+    // serve static assets and API first
+    { "src": "/(.*)\.(css|js|json|png|jpg|jpeg|gif|svg|webp|ico|txt|pdf|pptx|docx)$", "dest": "/$1.$2" },
+    { "src": "/api/.*", "dest": "/api" },
+    // SPA fallback for everything else
+    { "src": "/.*", "dest": "/index.html" }
   ]
 }
 
