--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,7 @@
 {
-  "routes": [
-    // serve static assets and API first
-    { "src": "/(.*)\.(css|js|json|png|jpg|jpeg|gif|svg|webp|ico|txt|pdf|pptx|docx)$", "dest": "/$1.$2" },
-    { "src": "/api/.*", "dest": "/api" },
-    // SPA fallback for everything else
-    { "src": "/.*", "dest": "/index.html" }
+  "rewrites": [
+    { "source": "/api/(.*)", "destination": "/api" },
+    { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
 
